--- a/server/public/views/templates/gameview.html
+++ b/server/public/views/templates/gameview.html
@@ -4,6 +4,6 @@
   <h3 ng-if="game.messageText != ''" class="alert alert-warning">{{game.messageText}}</h3>
 
   <div id="button-container">
-    <div class="color-button" ng-repeat="color in game.factory" ng-style="{background: color}" ng-click="game.handleInput(color)"></div>
+    <div class="color-button" ng-repeat="color in game.factory.colors" ng-style="{background: color}" ng-click="game.handleInput(color)"></div>
   </div>
 </div>
